--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -896,6 +896,201 @@
     "# Calculate other metrics\n",
     "print(classification_report(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tensorflow in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.16.1)\n",
+      "Requirement already satisfied: tensorflow-intel==2.16.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow) (2.16.1)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.1.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.6.3)\n",
+      "Requirement already satisfied: flatbuffers>=23.5.26 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (24.3.25)\n",
+      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.5.4)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.2.0)\n",
+      "Requirement already satisfied: h5py>=3.10.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.11.0)\n",
+      "Requirement already satisfied: libclang>=13.0.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (18.1.1)\n",
+      "Requirement already satisfied: ml-dtypes~=0.3.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (0.3.2)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.3.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (23.2)\n",
+      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.25.3)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.31.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (69.1.0)\n",
+      "Requirement already satisfied: six>=1.12.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.16.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.4.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (4.11.0)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.16.0)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.62.2)\n",
+      "Requirement already satisfied: tensorboard<2.17,>=2.16 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (2.16.2)\n",
+      "Requirement already satisfied: keras>=3.0.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (3.2.1)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.26.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorflow-intel==2.16.1->tensorflow) (1.26.3)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.23.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from astunparse>=1.6.0->tensorflow-intel==2.16.1->tensorflow) (0.42.0)\n",
+      "Requirement already satisfied: rich in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (13.7.1)\n",
+      "Requirement already satisfied: namex in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.0.8)\n",
+      "Requirement already satisfied: optree in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.11.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2.2.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.21.0->tensorflow-intel==2.16.1->tensorflow) (2024.2.2)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.6)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (0.7.2)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (3.0.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow-intel==2.16.1->tensorflow) (2.1.5)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (2.17.2)\n",
+      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow-intel==2.16.1->tensorflow) (0.1.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install tensorflow\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CNN Multi Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\keras\\src\\layers\\core\\embedding.py:86: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 121ms/step - accuracy: 0.7815 - loss: 0.4859 - val_accuracy: 0.8167 - val_loss: 0.4105\n",
+      "Epoch 2/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 0.8608 - loss: 0.3163 - val_accuracy: 0.8117 - val_loss: 0.4229\n",
+      "Epoch 3/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 0.9554 - loss: 0.1305 - val_accuracy: 0.8114 - val_loss: 0.6969\n",
+      "Epoch 4/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 0.9946 - loss: 0.0260 - val_accuracy: 0.7943 - val_loss: 0.8024\n",
+      "Epoch 5/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 113ms/step - accuracy: 0.9994 - loss: 0.0057 - val_accuracy: 0.8052 - val_loss: 1.0225\n",
+      "Epoch 6/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 116ms/step - accuracy: 0.9998 - loss: 0.0020 - val_accuracy: 0.8036 - val_loss: 1.0727\n",
+      "Epoch 7/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 0.9998 - loss: 0.0030 - val_accuracy: 0.8021 - val_loss: 1.1025\n",
+      "Epoch 8/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 1.0000 - loss: 6.6592e-04 - val_accuracy: 0.8086 - val_loss: 1.3582\n",
+      "Epoch 9/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m100s\u001b[0m 111ms/step - accuracy: 0.9999 - loss: 0.0028 - val_accuracy: 0.8008 - val_loss: 1.2746\n",
+      "Epoch 10/10\n",
+      "\u001b[1m903/903\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 113ms/step - accuracy: 0.9965 - loss: 0.0113 - val_accuracy: 0.7827 - val_loss: 1.0992\n",
+      "\u001b[1m669/669\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 3ms/step\n",
+      "Accuracy: 0.7827347549569772\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.50      0.46      0.48      4667\n",
+      "           1       0.85      0.87      0.86     16717\n",
+      "\n",
+      "    accuracy                           0.78     21384\n",
+      "   macro avg       0.68      0.67      0.67     21384\n",
+      "weighted avg       0.78      0.78      0.78     21384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, Conv1D, GlobalMaxPooling1D, Dense, Concatenate\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Load the dataset\n",
+    "data = pd.read_csv('final_dataset.csv')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "data.dropna(inplace=True)\n",
+    "\n",
+    "# Split data into features (X) and target variable (y)\n",
+    "X_text = data['text']\n",
+    "X_numeric = data[['useful', 'funny']]\n",
+    "y = data['target']\n",
+    "\n",
+    "# Tokenize the text data\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(X_text)\n",
+    "X_seq = tokenizer.texts_to_sequences(X_text)\n",
+    "\n",
+    "# Pad sequences to ensure uniform length\n",
+    "max_sequence_length = 100  # adjust this based on your data\n",
+    "X_padded = pad_sequences(X_seq, maxlen=max_sequence_length, padding='post', truncating='post')\n",
+    "\n",
+    "# Encode categorical target variable\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "# Scale numerical features\n",
+    "scaler = StandardScaler()\n",
+    "X_numeric_scaled = scaler.fit_transform(X_numeric)\n",
+    "\n",
+    "# Combine text and numerical features\n",
+    "X_combined = Concatenate()([X_padded, X_numeric_scaled])\n",
+    "\n",
+    "# Convert X_combined and y_encoded to NumPy arrays\n",
+    "X_combined_np = np.array(X_combined)\n",
+    "y_encoded_np = np.array(y_encoded)\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_combined_np, y_encoded_np, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Define the CNN model\n",
+    "embedding_dim = 100  # adjust this based on your data\n",
+    "vocab_size = len(tokenizer.word_index) + 1  # add 1 for padding token\n",
+    "model = Sequential([\n",
+    "    Embedding(input_dim=vocab_size, output_dim=embedding_dim, input_length=max_sequence_length),\n",
+    "    Conv1D(filters=128, kernel_size=5, activation='relu'),\n",
+    "    GlobalMaxPooling1D(),\n",
+    "    Dense(units=64, activation='relu'),\n",
+    "    Dense(units=1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.1)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred = (model.predict(X_test) > 0.5).astype(int)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Calculate other metrics\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
