--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -1028,47 +1028,46 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Load the dataset\n",
+    "\n",
     "data = pd.read_csv('final_dataset.csv')\n",
     "\n",
-    "# Drop rows with missing values\n",
     "data.dropna(inplace=True)\n",
     "\n",
-    "# Split data into features (X) and target variable (y)\n",
+    "\n",
     "X_text = data['text']\n",
     "X_numeric = data[['useful', 'funny']]\n",
     "y = data['target']\n",
     "\n",
-    "# Tokenize the text data\n",
+    "\n",
     "tokenizer = Tokenizer()\n",
     "tokenizer.fit_on_texts(X_text)\n",
     "X_seq = tokenizer.texts_to_sequences(X_text)\n",
     "\n",
-    "# Pad sequences to ensure uniform length\n",
-    "max_sequence_length = 100  # adjust this based on your data\n",
+    "\n",
+    "max_sequence_length = 100  \n",
     "X_padded = pad_sequences(X_seq, maxlen=max_sequence_length, padding='post', truncating='post')\n",
     "\n",
-    "# Encode categorical target variable\n",
+    "\n",
     "label_encoder = LabelEncoder()\n",
     "y_encoded = label_encoder.fit_transform(y)\n",
     "\n",
-    "# Scale numerical features\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_numeric_scaled = scaler.fit_transform(X_numeric)\n",
     "\n",
-    "# Combine text and numerical features\n",
+    "\n",
     "X_combined = Concatenate()([X_padded, X_numeric_scaled])\n",
     "\n",
-    "# Convert X_combined and y_encoded to NumPy arrays\n",
+    "\n",
     "X_combined_np = np.array(X_combined)\n",
     "y_encoded_np = np.array(y_encoded)\n",
     "\n",
-    "# Split data into training and testing sets\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_combined_np, y_encoded_np, test_size=0.4, random_state=42)\n",
     "\n",
-    "# Define the CNN model\n",
-    "embedding_dim = 100  # adjust this based on your data\n",
-    "vocab_size = len(tokenizer.word_index) + 1  # add 1 for padding token\n",
+    "\n",
+    "embedding_dim = 100 \n",
+    "vocab_size = len(tokenizer.word_index) + 1 \n",
     "model = Sequential([\n",
     "    Embedding(input_dim=vocab_size, output_dim=embedding_dim, input_length=max_sequence_length),\n",
     "    Conv1D(filters=128, kernel_size=5, activation='relu'),\n",
@@ -1077,18 +1076,18 @@
     "    Dense(units=1, activation='sigmoid')\n",
     "])\n",
     "\n",
-    "# Compile the model\n",
+    "\n",
     "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Train the model\n",
+    "\n",
     "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.1)\n",
     "\n",
-    "# Evaluate the model\n",
+    "\n",
     "y_pred = (model.predict(X_test) > 0.5).astype(int)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
     "\n",
-    "# Calculate other metrics\n",
+    "\n",
     "print(classification_report(y_test, y_pred))"
    ]
   }
