--- a/ranking.ipynb
+++ b/ranking.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +277,15 @@
     "\n",
     "# Drop the remaining columns\n",
     "columns_to_keep = ['user_id', 'review_id', 'text', 'date', 'stars', 'useful', 'funny', 'target']\n",
-    "df.drop(columns=df.columns.difference(columns_to_keep), inplace=True)\n",
+    "df = df[columns_to_keep]\n",
     "\n",
-    "df.to_csv('final_dataset.csv', index=False)\n"
+    "# Save to a temporary file\n",
+    "temp_file = 'temp_final_dataset.csv'\n",
+    "df.to_csv(temp_file, index=False)\n",
+    "\n",
+    "# Replace the original file with the temporary file\n",
+    "import os\n",
+    "os.replace(temp_file, 'final_dataset.csv')\n"
    ]
   },
   {
