--- a/features.ipynb
+++ b/features.ipynb
@@ -25,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2824,10 +2831,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting fuzzy-c-means\n",
+      "  Downloading fuzzy_c_means-1.7.2-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: joblib<2.0.0,>=1.2.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.3.2)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.21.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.26.3)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.6.4 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (2.6.4)\n",
+      "Collecting tabulate<0.9.0,>=0.8.9 (from fuzzy-c-means)\n",
+      "  Downloading tabulate-0.8.10-py3-none-any.whl.metadata (25 kB)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.64.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (4.66.2)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.9.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (0.9.4)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.16.3 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (2.16.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (4.11.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm<5.0.0,>=4.64.1->fuzzy-c-means) (0.4.6)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from typer<0.10.0,>=0.9.0->fuzzy-c-means) (8.1.7)\n",
+      "Downloading fuzzy_c_means-1.7.2-py3-none-any.whl (9.1 kB)\n",
+      "Downloading tabulate-0.8.10-py3-none-any.whl (29 kB)\n",
+      "Installing collected packages: tabulate, fuzzy-c-means\n",
+      "Successfully installed fuzzy-c-means-1.7.2 tabulate-0.8.10\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install fuzzy-c-means\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FUZZY\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster Centers:\n",
+      "[[ 0.32410924 -0.55332281  0.02745265  0.24311494 -0.4533088   0.        ]\n",
+      " [-0.30077147  0.72255568 -0.00765622 -0.20560341  0.63553415  0.        ]]\n",
+      "Number of genuine reviews: 210\n",
+      "Number of fake reviews: 53250\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from fcmeans import FCM\n",
+    "\n",
+    "# Load the processed dataset\n",
+    "df = pd.read_csv('threshold.csv')\n",
+    "\n",
+    "# Define the threshold conditions for genuine reviews\n",
+    "genuine_thresholds = {\n",
+    "    'rule1_threshold': 1,  # RULE 1 above threshold\n",
+    "    'rule2_threshold': 1,  # RULE 2 above threshold\n",
+    "    'rule3_threshold': 0,  # RULE 3 below threshold\n",
+    "    'rule4_threshold': 0,  # RULE 4 below threshold\n",
+    "    'rule5_threshold': 1,  # RULE 5 above threshold\n",
+    "    'rule6_threshold': 0   # RULE 6 below threshold\n",
+    "}\n",
+    "\n",
+    "# Select rule threshold columns as features\n",
+    "features = df[['rule1_threshold', 'rule2_threshold', 'rule3_threshold', 'rule4_threshold', 'rule5_threshold', 'rule6_threshold']].values\n",
+    "\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "features_scaled = scaler.fit_transform(features)\n",
+    "\n",
+    "# Define the number of clusters\n",
+    "c = 2  # Binary clustering with genuine and fake clusters\n",
+    "\n",
+    "# Perform Fuzzy C-Means clustering\n",
+    "fcm = FCM(n_clusters=c, m=2.0)\n",
+    "fcm.fit(features_scaled)\n",
+    "\n",
+    "# Get the cluster centers and membership values\n",
+    "cntr = fcm.centers\n",
+    "u = fcm.u\n",
+    "\n",
+    "# Determine which cluster represents genuine and fake reviews\n",
+    "genuine_cluster = np.argmax(cntr[0])  # Assume the first cluster represents genuine reviews\n",
+    "fake_cluster = 1 - genuine_cluster\n",
+    "\n",
+    "# Determine the binary cluster membership based on the threshold conditions\n",
+    "cluster_membership_binary = []\n",
+    "for i in range(len(df)):\n",
+    "    num_rules_met = sum([1 for rule, threshold in genuine_thresholds.items() if df.at[i, rule] == threshold])\n",
+    "    is_genuine = num_rules_met >= 4\n",
+    "    cluster_membership_binary.append(int(is_genuine))\n",
+    "\n",
+    "# Add the binary cluster membership to the dataframe\n",
+    "df['binary_cluster'] = cluster_membership_binary\n",
+    "\n",
+    "# Count genuine and fake reviews\n",
+    "genuine_count = df['binary_cluster'].sum()\n",
+    "fake_count = len(df) - genuine_count\n",
+    "\n",
+    "# Save the results to a CSV file\n",
+    "df.to_csv('binary_clusters.csv', index=False)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Cluster Centers:\")\n",
+    "print(cntr)\n",
+    "print(f\"Number of genuine reviews: {genuine_count}\")\n",
+    "print(f\"Number of fake reviews: {fake_count}\")\n"
+   ]
   }
  ],
  "metadata": {
