--- a/features.ipynb
+++ b/features.ipynb
@@ -2955,10 +2955,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster Centers:\n",
+      "[[-0.30077143  0.7225557  -0.00765622 -0.20560339  0.63553416  0.        ]\n",
+      " [ 0.32410923 -0.55332282  0.02745265  0.24311494 -0.4533088   0.        ]]\n",
+      "Genuine cluster: 0, Fake cluster: 1\n",
+      "Number of genuine reviews: 29131\n",
+      "Number of fake reviews: 24329\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from fcmeans import FCM\n",
+    "\n",
+    "# Load the processed dataset\n",
+    "df = pd.read_csv('threshold.csv')\n",
+    "\n",
+    "# Define the threshold conditions for genuine reviews\n",
+    "genuine_thresholds = {\n",
+    "    'rule1_threshold': 1,  # RULE 1 above threshold\n",
+    "    'rule2_threshold': 1,  # RULE 2 above threshold\n",
+    "    'rule3_threshold': 0,  # RULE 3 below threshold\n",
+    "    'rule4_threshold': 0,  # RULE 4 below threshold\n",
+    "    'rule5_threshold': 1,  # RULE 5 above threshold\n",
+    "    'rule6_threshold': 0   # RULE 6 below threshold\n",
+    "}\n",
+    "\n",
+    "# Select rule threshold columns as features\n",
+    "features = df[['rule1_threshold', 'rule2_threshold', 'rule3_threshold', 'rule4_threshold', 'rule5_threshold', 'rule6_threshold']].values\n",
+    "\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "features_scaled = scaler.fit_transform(features)\n",
+    "\n",
+    "# Define the number of clusters\n",
+    "c = 2  # Binary clustering with genuine and fake clusters\n",
+    "\n",
+    "# Perform Fuzzy C-Means clustering\n",
+    "fcm = FCM(n_clusters=c, m=2.0)\n",
+    "fcm.fit(features_scaled)\n",
+    "\n",
+    "# Get the cluster centers and membership values\n",
+    "cntr = fcm.centers\n",
+    "u = fcm.u\n",
+    "\n",
+    "# Determine which cluster center is closer to the genuine thresholds\n",
+    "genuine_threshold_values = np.array(list(genuine_thresholds.values()))\n",
+    "\n",
+    "# Calculate the distance of each cluster center from the genuine thresholds\n",
+    "distances = np.linalg.norm(cntr - genuine_threshold_values, axis=1)\n",
+    "\n",
+    "# The cluster with the smallest distance is considered the genuine cluster\n",
+    "genuine_cluster = np.argmin(distances)\n",
+    "fake_cluster = 1 - genuine_cluster\n",
+    "\n",
+    "# Assign binary cluster membership based on the closer cluster\n",
+    "cluster_membership = np.argmax(u, axis=1)\n",
+    "cluster_membership_binary = [1 if cluster == genuine_cluster else 0 for cluster in cluster_membership]\n",
+    "\n",
+    "# Add the binary cluster membership to the dataframe\n",
+    "df['binary_cluster2'] = cluster_membership_binary\n",
+    "\n",
+    "# Save the results to a CSV file\n",
+    "df.to_csv('binary_clusters2.csv', index=False)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Cluster Centers:\")\n",
+    "print(cntr)\n",
+    "print(f\"Genuine cluster: {genuine_cluster}, Fake cluster: {fake_cluster}\")\n",
+    "print(f\"Number of genuine reviews: {cluster_membership_binary.count(1)}\")\n",
+    "print(f\"Number of fake reviews: {cluster_membership_binary.count(0)}\")\n"
+   ]
   }
  ],
  "metadata": {
