--- a/features.ipynb
+++ b/features.ipynb
@@ -2831,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2840,22 +2840,121 @@
      "text": [
       "Collecting fuzzy-c-means\n",
       "  Downloading fuzzy_c_means-1.7.2-py3-none-any.whl.metadata (4.7 kB)\n",
-      "Requirement already satisfied: joblib<2.0.0,>=1.2.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.3.2)\n",
-      "Requirement already satisfied: numpy<2.0.0,>=1.21.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.26.3)\n",
-      "Requirement already satisfied: pydantic<3.0.0,>=2.6.4 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (2.6.4)\n",
+      "Requirement already satisfied: joblib<2.0.0,>=1.2.0 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.3.2)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.21.1 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (1.26.2)\n",
+      "Collecting pydantic<3.0.0,>=2.6.4 (from fuzzy-c-means)\n",
+      "  Downloading pydantic-2.7.2-py3-none-any.whl.metadata (108 kB)\n",
+      "     ---------------------------------------- 0.0/108.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.0/108.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.0/108.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.0/108.5 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.0/108.5 kB ? eta -:--:--\n",
+      "     ----------- ---------------------------- 30.7/108.5 kB ? eta -:--:--\n",
+      "     -------------- ------------------------ 41.0/108.5 kB 1.9 MB/s eta 0:00:01\n",
+      "     -------------------- ---------------- 61.4/108.5 kB 648.1 kB/s eta 0:00:01\n",
+      "     --------------------------- --------- 81.9/108.5 kB 573.4 kB/s eta 0:00:01\n",
+      "     ------------------------------------ 108.5/108.5 kB 448.7 kB/s eta 0:00:00\n",
       "Collecting tabulate<0.9.0,>=0.8.9 (from fuzzy-c-means)\n",
       "  Downloading tabulate-0.8.10-py3-none-any.whl.metadata (25 kB)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.64.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (4.66.2)\n",
-      "Requirement already satisfied: typer<0.10.0,>=0.9.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (0.9.4)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.16.3 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (2.16.3)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (4.11.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm<5.0.0,>=4.64.1->fuzzy-c-means) (0.4.6)\n",
-      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from typer<0.10.0,>=0.9.0->fuzzy-c-means) (8.1.7)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.64.1 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (4.66.1)\n",
+      "Requirement already satisfied: typer<0.10.0,>=0.9.0 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from fuzzy-c-means) (0.9.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (0.6.0)\n",
+      "Collecting pydantic-core==2.18.3 (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means)\n",
+      "  Downloading pydantic_core-2.18.3-cp312-none-win_amd64.whl.metadata (6.7 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pydantic<3.0.0,>=2.6.4->fuzzy-c-means) (4.10.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm<5.0.0,>=4.64.1->fuzzy-c-means) (0.4.6)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from typer<0.10.0,>=0.9.0->fuzzy-c-means) (8.1.7)\n",
       "Downloading fuzzy_c_means-1.7.2-py3-none-any.whl (9.1 kB)\n",
+      "Downloading pydantic-2.7.2-py3-none-any.whl (409 kB)\n",
+      "   ---------------------------------------- 0.0/409.5 kB ? eta -:--:--\n",
+      "   ------ --------------------------------- 61.4/409.5 kB 1.1 MB/s eta 0:00:01\n",
+      "   ------ --------------------------------- 61.4/409.5 kB 1.1 MB/s eta 0:00:01\n",
+      "   -------- ------------------------------ 92.2/409.5 kB 655.4 kB/s eta 0:00:01\n",
+      "   ---------- --------------------------- 112.6/409.5 kB 656.4 kB/s eta 0:00:01\n",
+      "   ------------- ------------------------ 143.4/409.5 kB 610.6 kB/s eta 0:00:01\n",
+      "   --------------- ---------------------- 163.8/409.5 kB 614.4 kB/s eta 0:00:01\n",
+      "   ------------------- ------------------ 204.8/409.5 kB 593.2 kB/s eta 0:00:01\n",
+      "   ------------------------ ------------- 266.2/409.5 kB 656.4 kB/s eta 0:00:01\n",
+      "   --------------------------- ---------- 297.0/409.5 kB 681.0 kB/s eta 0:00:01\n",
+      "   ------------------------------ ------- 327.7/409.5 kB 655.9 kB/s eta 0:00:01\n",
+      "   ---------------------------------- --- 368.6/409.5 kB 695.9 kB/s eta 0:00:01\n",
+      "   ---------------------------------- --- 368.6/409.5 kB 695.9 kB/s eta 0:00:01\n",
+      "   ---------------------------------- --- 368.6/409.5 kB 695.9 kB/s eta 0:00:01\n",
+      "   -------------------------------------  399.4/409.5 kB 579.9 kB/s eta 0:00:01\n",
+      "   -------------------------------------- 409.5/409.5 kB 522.0 kB/s eta 0:00:00\n",
+      "Downloading pydantic_core-2.18.3-cp312-none-win_amd64.whl (1.9 MB)\n",
+      "   ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.0/1.9 MB 259.2 kB/s eta 0:00:08\n",
+      "    --------------------------------------- 0.0/1.9 MB 259.2 kB/s eta 0:00:08\n",
+      "    --------------------------------------- 0.0/1.9 MB 178.6 kB/s eta 0:00:11\n",
+      "    --------------------------------------- 0.0/1.9 MB 178.6 kB/s eta 0:00:11\n",
+      "   - -------------------------------------- 0.1/1.9 MB 286.7 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.1/1.9 MB 275.8 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.1/1.9 MB 275.8 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.1/1.9 MB 275.8 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.1/1.9 MB 275.8 kB/s eta 0:00:07\n",
+      "   -- ------------------------------------- 0.1/1.9 MB 211.7 kB/s eta 0:00:09\n",
+      "   -- ------------------------------------- 0.1/1.9 MB 211.7 kB/s eta 0:00:09\n",
+      "   -- ------------------------------------- 0.1/1.9 MB 211.7 kB/s eta 0:00:09\n",
+      "   --- ------------------------------------ 0.2/1.9 MB 232.7 kB/s eta 0:00:08\n",
+      "   --- ------------------------------------ 0.2/1.9 MB 232.7 kB/s eta 0:00:08\n",
+      "   --- ------------------------------------ 0.2/1.9 MB 232.7 kB/s eta 0:00:08\n",
+      "   ---- ----------------------------------- 0.2/1.9 MB 230.5 kB/s eta 0:00:08\n",
+      "   ---- ----------------------------------- 0.2/1.9 MB 230.5 kB/s eta 0:00:08\n",
+      "   ---- ----------------------------------- 0.2/1.9 MB 230.5 kB/s eta 0:00:08\n",
+      "   ----- ---------------------------------- 0.3/1.9 MB 241.9 kB/s eta 0:00:07\n",
+      "   ----- ---------------------------------- 0.3/1.9 MB 254.3 kB/s eta 0:00:07\n",
+      "   ------ --------------------------------- 0.3/1.9 MB 282.2 kB/s eta 0:00:06\n",
+      "   -------- ------------------------------- 0.4/1.9 MB 318.9 kB/s eta 0:00:05\n",
+      "   --------- ------------------------------ 0.5/1.9 MB 356.5 kB/s eta 0:00:05\n",
+      "   ---------- ----------------------------- 0.5/1.9 MB 375.4 kB/s eta 0:00:04\n",
+      "   ---------- ----------------------------- 0.5/1.9 MB 361.4 kB/s eta 0:00:04\n",
+      "   ----------- ---------------------------- 0.5/1.9 MB 368.1 kB/s eta 0:00:04\n",
+      "   ----------- ---------------------------- 0.6/1.9 MB 377.4 kB/s eta 0:00:04\n",
+      "   ------------ --------------------------- 0.6/1.9 MB 386.2 kB/s eta 0:00:04\n",
+      "   ------------- -------------------------- 0.6/1.9 MB 401.0 kB/s eta 0:00:04\n",
+      "   ------------- -------------------------- 0.6/1.9 MB 401.0 kB/s eta 0:00:04\n",
+      "   ------------- -------------------------- 0.7/1.9 MB 385.8 kB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 0.7/1.9 MB 387.2 kB/s eta 0:00:04\n",
+      "   -------------- ------------------------- 0.7/1.9 MB 390.8 kB/s eta 0:00:04\n",
+      "   ---------------- ----------------------- 0.8/1.9 MB 416.5 kB/s eta 0:00:03\n",
+      "   ------------------- -------------------- 0.9/1.9 MB 459.7 kB/s eta 0:00:03\n",
+      "   -------------------- ------------------- 1.0/1.9 MB 478.5 kB/s eta 0:00:02\n",
+      "   -------------------- ------------------- 1.0/1.9 MB 482.5 kB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 1.0/1.9 MB 492.5 kB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 1.1/1.9 MB 499.9 kB/s eta 0:00:02\n",
+      "   ----------------------- ---------------- 1.1/1.9 MB 512.7 kB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 1.2/1.9 MB 516.8 kB/s eta 0:00:02\n",
+      "   ------------------------ --------------- 1.2/1.9 MB 515.2 kB/s eta 0:00:02\n",
+      "   ------------------------- -------------- 1.2/1.9 MB 513.5 kB/s eta 0:00:02\n",
+      "   ------------------------- -------------- 1.2/1.9 MB 511.1 kB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 1.2/1.9 MB 504.0 kB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 1.3/1.9 MB 511.0 kB/s eta 0:00:02\n",
+      "   --------------------------- ------------ 1.3/1.9 MB 508.7 kB/s eta 0:00:02\n",
+      "   ---------------------------- ----------- 1.3/1.9 MB 508.2 kB/s eta 0:00:02\n",
+      "   ----------------------------- ---------- 1.4/1.9 MB 518.8 kB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 1.4/1.9 MB 527.3 kB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 1.5/1.9 MB 538.5 kB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 1.5/1.9 MB 551.6 kB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 1.6/1.9 MB 560.6 kB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 1.6/1.9 MB 566.3 kB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 1.7/1.9 MB 581.2 kB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 1.8/1.9 MB 589.3 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.9 MB 604.5 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.9/1.9 MB 615.0 kB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.9/1.9 MB 605.8 kB/s eta 0:00:00\n",
       "Downloading tabulate-0.8.10-py3-none-any.whl (29 kB)\n",
-      "Installing collected packages: tabulate, fuzzy-c-means\n",
-      "Successfully installed fuzzy-c-means-1.7.2 tabulate-0.8.10\n",
+      "Installing collected packages: tabulate, pydantic-core, pydantic, fuzzy-c-means\n",
+      "  Attempting uninstall: pydantic-core\n",
+      "    Found existing installation: pydantic_core 2.16.3\n",
+      "    Uninstalling pydantic_core-2.16.3:\n",
+      "      Successfully uninstalled pydantic_core-2.16.3\n",
+      "  Attempting uninstall: pydantic\n",
+      "    Found existing installation: pydantic 2.6.3\n",
+      "    Uninstalling pydantic-2.6.3:\n",
+      "      Successfully uninstalled pydantic-2.6.3\n",
+      "Successfully installed fuzzy-c-means-1.7.2 pydantic-2.7.2 pydantic-core-2.18.3 tabulate-0.8.10\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -2873,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2881,11 +2980,14 @@
      "output_type": "stream",
      "text": [
       "Cluster Centers:\n",
-      "[[-0.30077143  0.7225557  -0.00765622 -0.20560339  0.63553416  0.        ]\n",
-      " [ 0.32410923 -0.55332282  0.02745265  0.24311494 -0.4533088   0.        ]]\n",
-      "Genuine cluster: 0, Fake cluster: 1\n",
-      "Number of genuine reviews: 29131\n",
-      "Number of fake reviews: 24329\n"
+      "[[ 0.4919602   1.24475205  0.0430911   0.37266728 -0.58015649  0.        ]\n",
+      " [-1.63950621 -0.22399801  0.01822142 -2.33910286 -0.25646565  0.        ]\n",
+      " [ 0.46120968  1.05775736  0.0400571   0.36083988  1.56276384  0.        ]\n",
+      " [-1.71984731 -0.50701176  0.01759816  0.29418499 -0.38291777  0.        ]\n",
+      " [ 0.53661934 -0.77055476  0.05247025  0.39466331 -0.58658186  0.        ]]\n",
+      "Genuine cluster: 2, Fake cluster: 4\n",
+      "Number of genuine reviews: 12241\n",
+      "Number of fake reviews: 41219\n"
      ]
     }
    ],
@@ -2919,7 +3021,7 @@
     "features_scaled = scaler.fit_transform(features)\n",
     "\n",
     "# Define the number of clusters\n",
-    "c = 2  # Binary clustering with genuine and fake clusters\n",
+    "c = 5  # Binary clustering with genuine and fake clusters\n",
     "\n",
     "# Perform Fuzzy C-Means clustering\n",
     "fcm = FCM(n_clusters=c, m=2.0)\n",
@@ -2958,6 +3060,13 @@
     "print(f\"Number of genuine reviews: {cluster_membership_binary.count(1)}\")\n",
     "print(f\"Number of fake reviews: {cluster_membership_binary.count(0)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
