--- a/features.ipynb
+++ b/features.ipynb
@@ -5851,11 +5851,11 @@
     "# Load the dataset\n",
     "df = pd.read_csv('threshold.csv')\n",
     "\n",
-    "# Assuming the dataset has a 'text' column and a 'label' column (0 for fake, 1 for genuine)\n",
-    "# If your dataset does not have these columns, you need to adjust the column names accordingly\n",
+    "# Convert 'genuine' and 'fake' labels to numerical labels\n",
+    "df['target'] = df['target'].map({'genuine': 1, 'fake': 0})\n",
     "\n",
     "# Split the dataset into train and test sets\n",
-    "train_texts, test_texts, train_labels, test_labels = train_test_split(df['text'], df['label'], test_size=0.2, random_state=42)\n",
+    "train_texts, test_texts, train_labels, test_labels = train_test_split(df['text'], df['target'], test_size=0.2, random_state=42)\n",
     "\n",
     "# Load the BERT tokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
